2009-04-22  Jb Evain  <jbevain@novell.com>

	* Mono.Tuner/CheckVisibility.cs: take FamAndAssem into account.

2009-04-22  Jb Evain  <jbevain@novell.com>

	* AdjustVisibility.cs: we're now turning non exposed fields and
	methods (API wise) that are `protected` into `protected and internal`.

2009-04-08  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner.csproj: Update.

2009-04-03  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner/InjectSecurityAttributes.cs: Show a warning
	when the secattr file is not found.

2009-03-10  Jb Evain  <jbevain@novell.com>

	* Mono.Tuner/MoonlightAssemblyStep.cs: don't remove
	the LoadReferencesStep for specific Moonlight tuning.

2009-03-01  Jb Evain  <jbevain@novell.com>

	* Mono.Tuner.dll.sources
	* Mono.Tuner/MoonlightAssemblyStep.cs: add new step specific
	to moonlight to instrument Moonlight assemblies one by one.

2009-02-19  Jb Evain  <jbevain@novell.com>

	* Mono.Tuner/InjectSecurityAttributes.cs: also remove existing
	CAS security declarations before injecting CoreCLR security attributes.

2009-02-18  Jb Evain  <jbevain@novell.com>

	* Mono.Tuner/InjectSecurityAttributes.cs: new tuner step
	which is able to process the security attribute data files.
	It replaces the previous InjectAttributes step.

2009-01-28  Jb Evain  <jbevain@novell.com>

	* Mono.Tuner/CheckVisibility.cs: use the appropriate Resolve methods.

2008-12-01  Jb Evain  <jbevain@novell.com>

	* Makefile: move tuning logic inside ../moon. We now simply build
	the tuner as a simple library.

2008-11-20  Jb Evain  <jbevain@novell.com>

	* Makefile: simplify Makefile and tune System.Xml.Linq.

2008-10-16  Jb Evain  <jbevain@novell.com>

	* masterinfos/silverlight/*.info: update to SL2.

2008-09-23  Jb Evain  <jbevain@novell.com>

	* masterinfos/silverlight/Mono.CompilerServices.SymbolWriter.info
	* Makefile:
		tune the SymbolWriter as well.

2008-09-23  Jb Evain  <jbevain@novell.com>

	* Makefile: only execute the check visibility step if